@@ -13,6 +13,9 @@ public class ConfigHelper {
         Config.tanningRackFinishChance = ConfigHolder.SERVER.tanningRackFinishChance.get();
         Config.changeMiningLevelForVanillaBlocks = ConfigHolder.SERVER.changeMiningLevelForVanillaBlocks.get();
         Config.aquaductTickChanceBoneMealEffect = ConfigHolder.SERVER.aquaductTickChanceBoneMealEffect.get();
+        Config.aquaductEffectRange = ConfigHolder.SERVER.aquaductEffectRange.get();
+        Config.aquaductFillPerTick = ConfigHolder.SERVER.aquaductFillPerTick.get();
+        Config.aquaductUsePerTick = ConfigHolder.SERVER.aquaductUsePerTick.get();
         Config.feederTickChanceBreedAnimalEffect = ConfigHolder.SERVER.feederTickChanceBreedAnimalEffect.get();
         Config.feederEffectRange = ConfigHolder.SERVER.feederEffectRange.get();
         Config.forceToolForWood = ConfigHolder.SERVER.forceToolForWood.get();
