@@ -1,3 +1,4 @@
+- configurable aquaduct effect range, fill per tick and use per tick
 - all blocks from wood material harvestable only with axe
 - added rhino tusk and saber teeth
 - added woolly rhino entity
